--- a/mmex/po/russian.po
+++ b/mmex/po/russian.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: mmex\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-17 17:04+0400\n"
-"PO-Revision-Date: 2013-01-17 17:06+0400\n"
+"PO-Revision-Date: 2013-01-22 13:21+0400\n"
 "Last-Translator: Nikolay <vomikan@mail.ru>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "Language: ru\n"
@@ -644,7 +644,7 @@ msgstr " дней просрочено!"
 
 #: src/billsdepositspanel.cpp:413
 msgid "Enter next Occurrence..."
-msgstr "Введите дату следующего начисления..."
+msgstr "Выполнить транзакцию..."
 
 #: src/billsdepositspanel.cpp:415
 msgid "Skip next Occurrence"
