--- a/mmex/po/russian.po
+++ b/mmex/po/russian.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: mmex\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-17 17:04+0400\n"
-"PO-Revision-Date: 2013-01-22 13:21+0400\n"
+"PO-Revision-Date: 2013-03-09 17:42+0400\n"
 "Last-Translator: Nikolay <vomikan@mail.ru>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "Language: ru\n"
@@ -4281,7 +4281,7 @@ msgstr "Введена неверная категория"
 
 #: src/splittransactionsdialog.cpp:106
 msgid " Split Category Details"
-msgstr "Свойства повторяющейся проводки"
+msgstr "Свойства составной транзакции"
 
 #: src/splittransactionsdialog.cpp:178
 msgid "&Select Category"
