--- a/mmex/po/russian.po
+++ b/mmex/po/russian.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: mmex\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-10 21:50+0400\n"
-"PO-Revision-Date: 2013-03-10 22:11+0400\n"
+"PO-Revision-Date: 2013-03-15 13:08+0400\n"
 "Last-Translator: Nikolay <vomikan@mail.ru>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "Language: ru\n"
@@ -4930,7 +4930,7 @@ msgstr "Показать отмеченные"
 
 #: src/constants.h:66
 msgid "View Duplicates"
-msgstr "Показать задвоенные"
+msgstr "Показать дубликаты"
 
 #: src/constants.h:67
 msgid "View Today"
